force-app/main/default/objects/Car_Details__c/Car_Details__c.object-meta.xml
<CustomObject>
    <label>Car Details</label>
    <nameField>
        <label>Car Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Car Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>