force-app/main/default/objects/Car_Details__c/fields/Car_Image__c.field-meta.xml
<CustomField>
    <fullName>Car_Image__c</fullName>
    <label>Car Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>