force-app/main/default/objects/Car_Details__c/fields/Car_Model__c.field-meta.xml
<CustomField>
    <fullName>Car_Model__c</fullName>
    <label>Car Model</label>
    <length>18</length>
    <type>Text</type>
</CustomField>